--- a/env.ipynb
+++ b/env.ipynb
@@ -35,6 +35,7 @@
       },
       "outputs": [],
       "source": [
+         "# Here we are loading the token from your own Hugging face account which you can find in your 'setting/ Access Tokens' copy your token from there and past in the .env file"
         "HUGGINGFACEHUB_API_TOKEN = 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"
       ]
     }
